fixed subtext in info section wrapping weird after chaning box-sizing to border-box

--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ a {
             padding: 10px;
             margin-left: 15px;
             margin-right: 15px;
-            width: 100px;
+            width: 200px;
             color: #1F2937;
             
             /* border: 5px solid gray; */
